<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="umbrellacorp">UMBRELLACORP</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="forgot_password">Forgot password?</string>
</resources>
